--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Azure1</td>
+                        <td>Azure</td>
                         <td>Powershell</td>
                         <td>Create AD Group</td>
                         <td><a href="https://drive.google.com/file/d/1oZfF4aWfMpubgc8mLPun5ZUzl8MNzVed/view?usp=sharing">Download</a></td>
