--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <td><a href="https://drive.google.com/file/d/1oZfF4aWfMpubgc8mLPun5ZUzl8MNzVed/view?usp=sharing">Download</a></td>
                     </tr>
                     <tr>
-                        <td>Microsoft</td>
+                        <td>Microsoft Azure</td>
                         <td>Powershell</td>
                         <td>Create AD Group</td>
                         <td><a href="/index.html">Download</a></td>
