--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <tr>
                         <td>ROIScan.vbs</td>
                         <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="https://drive.google.com/file/d/1oZfF4aWfMpubgc8mLPun5ZUzl8MNzVed/view?usp=sharing">Download</a></td>
+                        <td>Script to create an inventory scan of installed Office applications:(Supported Office Families: 2000, 2002, 2003, 2007,2010, 2013, 2016, O365)</td>
+                        <td><a href="https://microsoft-my.sharepoint.com/:u:/p/gausin/EdlrkLxFvSlMjp5vCgl728IBY_NliAUNxhh9aylPMpquZQ?e=bmlHBI">Download</a></td>
                     </tr>
                     <tr>
                         <td>Microsoft</td>
