--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <td>ROIScan.vbs</td>
                         <td>Powershell</td>
                         <td>Script to create an inventory scan of installed Office applications:(Supported Office Families: 2000, 2002, 2003, 2007,2010, 2013, 2016, O365)</td>
-                        <td><a href="https://microsoft-my.sharepoint.com/:u:/p/gausin/EdlrkLxFvSlMjp5vCgl728IBY_NliAUNxhh9aylPMpquZQ?e=bmlHBI">Download</a></td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj3HLoViVwA2v5fI?e=oR8sjL">Download</a></td>
                     </tr>
                     <tr>
                         <td>Microsoft</td>
