--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
 
-    <title>Search Script</title>
+    <title>Office Automation: Search a Script here</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <style type="text/css">
@@ -22,7 +21,7 @@
    
     <div class="row">
         <div class="col-lg-12">
-            <h3>Search Script</h3>
+            <h3>ffice Automation: Search a Script here</h3>
         </div>
     </div>
     <div class="row">
@@ -44,57 +43,39 @@
                 <tbody>
                     <tr>
                         <td>ROIScan.vbs</td>
-                        <td>Powershell</td>
+                        <td>.VBS</td>
                         <td>Script to create an inventory scan of installed Office applications:(Supported Office Families: 2000, 2002, 2003, 2007,2010, 2013, 2016, O365)</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj3HLoViVwA2v5fI?e=oR8sjL">Download</a></td>
                     </tr>
                     <tr>
-                        <td>Sumeet</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
+                        <td>Office Scrubs</td>
+                        <td>.VBS</td>
+                        <td>Script to remove Office Click To Run (C2R)and MSI products, when a regular uninstall is no longer possible. Scope: Office 2003(MSI), 2007(MSI), 2010(MSI), 2013(MSI or C2R), 2016(MSI or C2R), O365 C2R and O2019 C2R products</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj5lnnOXaC0lpqYy?e=d9vePtDownload</a></td>
                     </tr>
 					<tr>
-                        <td>Mr. Basu</td>
+                        <td>Remove Cached License and Identity Info from Office</td>
+                        <td>.VBS</td>
+                        <td>Remove Office 365 license and cached identities from HKCU registry along with credentials stored in Credential Manager</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxBfDiW1LIjHZfJe?e=rK4k85">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Clear credentials from Workplace Join</td>
+                        <td>.EXE/ .VBS</td>
+                        <td>To automate WPJ removal, run WPJCleanUp.cmd.</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsnVws1vQnXujLacg?e=Zc1Snm">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Remove the Office activation for unmanaged devices</td>
                         <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
+                        <td>This script reset the Office activation for unmanaged devices (Domain Joined aka DJ). In a managed environment</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxslqyQ-KA2zpy4Zas?e=Jgo2H0">Download</a></td>
                     </tr>
                     <tr>
-                        <td>Bharat</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
-                    </tr>
-					<tr>
-                        <td>Mr. Praveen</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
-                    </tr>
-					<tr>
-                        <td>Sumeet2222</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
-                    </tr>
-					<tr>
-                        <td>Mr. Basu22222</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
-                    </tr>
-                    <tr>
-                        <td>Change</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
-                    </tr>
-					<tr>
-                        <td>Mr. Gaurav2</td>
-                        <td>Powershell</td>
-                        <td>Create AD Group</td>
-                        <td><a href="/index.html">Download</a></td>
+                        <td>Shared Computer Licensing</td>
+                        <td>.VBS</td>
+                        <td>Removes O365 licenses from the (Office) from Software Protection Platform store, if computer is configured for SCA as this breaks the SCA mode</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxUug-iRxE11_sFt?e=YGMhXF">Download</a></td>
                     </tr>
                 </tbody>
             </table>
