--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +22,7 @@
    
     <div class="row">
         <div class="col-lg-12">
-            <h3>ffice Automation: Search a Script here</h3>
+            <h3>Office Automation: Search a Script here</h3>
         </div>
     </div>
     <div class="row">
