--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <td>Office Scrubs</td>
                         <td>.VBS</td>
                         <td>Script to remove Office Click To Run (C2R)and MSI products, when a regular uninstall is no longer possible. Scope: Office 2003(MSI), 2007(MSI), 2010(MSI), 2013(MSI or C2R), 2016(MSI or C2R), O365 C2R and O2019 C2R products</td>
-                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj5lnnOXaC0lpqYy?e=d9vePtDownload</a></td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj5lnnOXaC0lpqYy?e=d9vePtDownload"</a></td>
                     </tr>
 					<tr>
                         <td>Remove Cached License and Identity Info from Office</td>
