--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
 
-    <title>Office Automation: Search a Script here</title>
+    <title>Office Automation: Search a Script</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <style type="text/css">
@@ -22,7 +22,7 @@
    
     <div class="row">
         <div class="col-lg-12">
-            <h3>Office Automation: Search a Script here</h3>
+            <h3>Office Automation: Search a Script</h3>
         </div>
     </div>
     <div class="row">
@@ -77,6 +77,36 @@
                         <td>.VBS</td>
                         <td>Removes O365 licenses from the (Office) from Software Protection Platform store, if computer is configured for SCA as this breaks the SCA mode</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxUug-iRxE11_sFt?e=YGMhXF">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>The Excel</td>
+                        <td>.XLSM/.VBS/.BAT</td>
+                        <td>Create AD Group</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsyKUfwC_3qtxy3pQ?e=Sid3sG">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Check for SCCM</td>
+                        <td>Powershell</td>
+                        <td>OfficeMgmtCom Policy related info</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsyBbvFCJRoTiOwz3?e=SCy4p9">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Microsoft Teams</td>
+                        <td>Powershell</td>
+                        <td>Uninstall the Microsoft Teams App and remove Teams directory for a user</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsx6zMpQzCiUZ9DjE?e=TNO71k">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Printer</td>
+                        <td>Powershell</td>
+                        <td>Cancel and clear print jobs stuck in the print queue</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxt4sVxgdOYMz89X?e=mnkAf0">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Update O365 Display Photo</td>
+                        <td>.BAT</td>
+                        <td>A script to change Office365 Profile Photo</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxipVXw632MbB-ft?e=ljHA4b">Download</a></td>
                     </tr>
                 </tbody>
             </table>
