--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                         <td>A script to change Office365 Profile Photo</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxipVXw632MbB-ft?e=ljHA4b">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Office File Explorer</td>
+                        <td>.EXE</td>
+                        <td>A tool to fix a vast majority of known Office problems(Word, Excel, PowerPoint) Location in Zip file:'Office-File-Explorer-master/bin/Release/Office File Explorer.exe'</td>
+                        <td><a href="https://github.com/desjarlais/Office-File-Explorer/archive/master.zip">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
