--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<tr>
                         <td>Office File Explorer</td>
                         <td>.EXE</td>
-                        <td>A tool to fix a vast majority of known Office problems(Word, Excel, PowerPoint) Location in Zip file:'Office-File-Explorer-master/bin/Release/Office File Explorer.exe'</td>
+                        <td>A tool to fix a vast majority of known Office problems(Word, Excel, PowerPoint). File Location inside Zip:'Office-File-Explorer-master/bin/Release/Office File Explorer.exe'</td>
                         <td><a href="https://github.com/desjarlais/Office-File-Explorer/archive/master.zip">Download</a></td>
                     </tr>
                 </tbody>
