--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                         <td>A tool to fix a vast majority of known Office problems(Word, Excel, PowerPoint). File Location inside Zip:'Office-File-Explorer-master/bin/Release/Office File Explorer.exe'</td>
                         <td><a href="https://github.com/desjarlais/Office-File-Explorer/archive/master.zip">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Office 365 Network Onboarding Tool</td>
+                        <td>.EXE</td>
+                        <td>This tool evaluates the quality of your network connection to Microsoft 365 services, like Exchange, SharePoint and Teams.</td>
+                        <td><a href="https://connectivity.office.com/?">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
