--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </tr>
 					<tr>
                         <td>Office 365 Network Onboarding Tool</td>
-                        <td>.EXE</td>
+                        <td>Web Based</td>
                         <td>This tool evaluates the quality of your network connection to Microsoft 365 services, like Exchange, SharePoint and Teams.</td>
                         <td><a href="https://connectivity.office.com/?">Download</a></td>
                     </tr>
