--- a/index.html
+++ b/index.html
@@ -116,9 +116,15 @@
                     </tr>
 					<tr>
                         <td>Office 365 Network Onboarding Tool</td>
-                        <td>Web Based</td>
+                        <td>.EXE</td>
                         <td>This tool evaluates the quality of your network connection to Microsoft 365 services, like Exchange, SharePoint and Teams.</td>
                         <td><a href="https://connectivity.office.com/?">Download</a></td>
+                    </tr>
+					<tr>
+                        <td>Check O365 Ports</td>
+                        <td>.PS1</td>
+                        <td>This tool scans Microsoft Ports required for Office365. To run 'powershell -noexit C:\Desktop\Check-OfficeProPlusPorts.ps1'</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsy5G2uutMpiIVN_I?e=X0xVS0">Download</a></td>
                     </tr>
                 </tbody>
             </table>
