--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
                         <td>A script to change Office365 Profile Photo</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsxipVXw632MbB-ft?e=ljHA4b">Download</a></td>
                     </tr>
+					<tr>
+                        <td>RMS Support Tool</td>
+                        <td>PowerShell</td>
+                        <td>Delete the currently downloaded policies and reset the user settings for AIP/MIP/AD RMS service</td>
+                        <td><a href="https://schiroky.github.io/RMS_Support_Tool/">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
