--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
 
-    <title>Office Automation: Search a Script</title>
+    <title>Office Tweaks: Search a Script</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <style type="text/css">
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <h3>Office Automation: Search a Script</h3>
+            <h3>Office Tweaks: Search a Script</h3>
         </div>
     </div>
     <div class="row">
