--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         <div class="col-lg-12">
            <p class="text-justify"><b>Disclaimer : </b>The sample scripts are not supported under any Microsoft support program or service. The sample scripts are provided AS IS without warranty  of any kind. Microsoft further disclaims all implied warranties including,  without limitation, any implied warranties of merchantability or of fitness for a particular purpose. The entire risk arising out of the use or performance of  the sample scripts and documentation remains with you. In no event shall Microsoft, its authors, or anyone else involved in the creation, production, or delivery of the scripts be liable for any damages whatsoever (including, without limitation, damages for loss of business profits, business interruption, loss of business information, or other pecuniary loss) arising out of the use of or inability to use the sample scripts or documentation, even if Microsoft has been advised of the possibility of such damages.</p>
         </div>
+
+		<div class="col-lg-12 text-center">
+			<a href='https://www.stat-counter.org/'>counter</a> 
+			<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=7decc8ce61395db732879024f71d423953ab9bdd'></script>
+			<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/736287/t/5"></script>
+		</div>
     </div>
 </div>
 
