Added OneDrive Uninstaller v1.4

--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
                         <td>Delete the currently downloaded policies and reset the user settings for AIP/MIP/AD RMS service</td>
                         <td><a href="https://schiroky.github.io/RMS_Support_Tool/">Download</a></td>
                     </tr>
+					<tr>
+                        <td>OneDrive-Uninstaller</td>
+                        <td>.BAT</td>
+                        <td>A script to remove OneDrive (Run as Administrator)</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs0PO95sniT1c3trQ?e=KUDGX7">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
