Change OneNote UPN script Added

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
                         <td>A script to remove OneDrive (Run as Administrator)</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs0PO95sniT1c3trQ?e=KUDGX7">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Chnage UPN for OneNote 2016</td>
+                        <td>.VBS</td>
+                        <td>A script to change the UPN for OneNote</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs0dFbRWzWk9KjOza?e=WPHx51">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
