Added 'Test Internet Connectivity' tool

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
                         <td>A script to change the UPN for OneNote</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs0dFbRWzWk9KjOza?e=WPHx51">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Test Office Internet Connectivity</td>
+                        <td>.EXE</td>
+                        <td>A tool to check Internet connectivity for Office 365 Applications</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs03zVUcgfZoEtKLP?e=9EokTv">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
