Added 'Enable ULS logging for Microsoft 365'

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                         <td>This script reset the Office activation for unmanaged devices (Domain Joined aka DJ). In a managed environment</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxslqyQ-KA2zpy4Zas?e=Jgo2H0">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Office 365 ULS Logs</td>
+                        <td>.BAT</td>
+                        <td>To collect Office diagnostic logs. Refer 'Read Me' for more info.</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs05Qd7kXpXZE0d2z?e=5DC3wB">Download</a></td>
+                    </tr>
                     <tr>
                         <td>Shared Computer Licensing</td>
                         <td>.VBS</td>
