Office Activation Report Script Updated

--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
                         <td>A tool to check Internet connectivity for Office 365 Applications</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs03zVUcgfZoEtKLP?e=9EokTv">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Device Activation Report</td>
+                        <td>.PS1</td>
+                        <td>Script to pull Office 365 Activation report from a Tenant</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs1PBQpre7FwTlEEQ?e=RRwtHF">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
