ROIScan_Full Updated

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                         <td>Script to create an inventory scan of installed Office applications:(Supported Office Families: 2000, 2002, 2003, 2007,2010, 2013, 2016, O365)</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxsj3HLoViVwA2v5fI?e=oR8sjL">Download</a></td>
                     </tr>
+					<tr>
+                        <td>ROIScan_full</td>
+                        <td>.VBS</td>
+                        <td>Robust Office Inventory-Full Report</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs1T8IqYTWfwSbxiz?e=Pk7ScE">Download</a></td>
+                    </tr>
                     <tr>
                         <td>Office Scrubs</td>
                         <td>.VBS</td>
