Update https://github.com/desjarlais/Office-File-Explorer/releases link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <td>Office File Explorer</td>
                         <td>.EXE</td>
                         <td>A tool to fix a vast majority of known Office problems(Word, Excel, PowerPoint). File Location inside Zip:'Office-File-Explorer-master/bin/Release/Office File Explorer.exe'</td>
-                        <td><a href="https://github.com/desjarlais/Office-File-Explorer/archive/master.zip">Download</a></td>
+                        <td><a href="https://github.com/desjarlais/Office-File-Explorer/releases">Download</a></td>
                     </tr>
 					<tr>
                         <td>Printer</td>
