Script to change O365 Channels

--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
                         <td>Script to pull Office 365 Activation report from a Tenant</td>
                         <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs1PBQpre7FwTlEEQ?e=RRwtHF">Download</a></td>
                     </tr>
+					<tr>
+                        <td>Script to Switch Office365 Channels</td>
+                        <td>.BAT</td>
+                        <td>Script to change Office365 channels (Current, Monthly or Semi-Annual)</td>
+                        <td><a href="https://1drv.ms/u/s!AuPeAoX1pXBxs1pj2XgjTxFUFAv0?e=lef34h">Download</a></td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
